k8-services/aws-stage/apigw/apigw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfs-apigw-deployment
  labels:
    app.kubernetes.io/name: apigw
    app: apigw
  namespace: tfs-apigw
  annotations:
    linkerd.io/inject: enabled
spec:
  selector:
    matchLabels:
      app: apigw
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: apigw
    spec:
      containers:
        - name: syllo-apigw
          image: 309602515679.dkr.ecr.eu-west-1.amazonaws.com/syllo-api-gateway:1.6.82
          # imagePullPolicy: Always # Defaults to ifNotPresent
          ports:
            - containerPort: 10001
              name: apigw-grpc-port
          # First a startup probe checks if the pod has started
          # Thanks to the startup probe, the application will have a maximum of 5 minutes (30 * 10 = 300s) to finish its startup.
          # Once the startup probe has succeeded once, the liveness probe takes over to provide a fast response to container deadlocks.
          # If the startup probe never succeeds, the container is killed after 300s and subject to the pod's restartPolicy.
          # startupProbe:
          #   httpGet:
          #     path: /probes/startupz # Any code greater than or equal to 200 and less than 400 indicates success. Any other code indicates failure.
          #     port: apigw-grpc-port
          #     scheme: HTTP
          #   initialDelaySeconds: 30 # Number of seconds after the container has started before startup, liveness or readiness probes are initiated. Defaults to 0 seconds. Minimum value is 0.
          #   periodSeconds: 10 # How often (in seconds) to perform the probe. Default to 10 seconds. Minimum value is 1.
          #   timeoutSeconds: 5 # Number of seconds after which the probe times out. Defaults to 1 second. Minimum value is 1.
          #   successThreshold: 1 # Minimum consecutive successes for the probe to be considered successful after having failed. Defaults to 1. Must be 1 for liveness and startup Probes. Minimum value is 1.
          #   failureThreshold: 30 # After a probe fails failureThreshold times in a row, Kubernetes considers that the overall check has failed: the container is not ready / healthy / live.
          # # Then the following 2 continue running
          # readinessProbe:
          #   httpGet:
          #     path: /probes/readyz # Any code greater than or equal to 200 and less than 400 indicates success. Any other code indicates failure.
          #     port: apigw-grpc-port
          #     scheme: HTTP
          #   initialDelaySeconds: 60 # Number of seconds after the container has started before startup, liveness or readiness probes are initiated. Defaults to 0 seconds. Minimum value is 0.
          #   periodSeconds: 10 # How often (in seconds) to perform the probe. Default to 10 seconds. Minimum value is 1.
          #   timeoutSeconds: 1 # Number of seconds after which the probe times out. Defaults to 1 second. Minimum value is 1.
          #   successThreshold: 2 # Minimum consecutive successes for the probe to be considered successful after having failed. Defaults to 1. Must be 1 for liveness and startup Probes. Minimum value is 1.
          #   failureThreshold: 10 # After a probe fails failureThreshold times in a row, Kubernetes considers that the overall check has failed: the container is not ready / healthy / live.
          # livenessProbe:
          #   httpGet:
          #     path: /probes/healthz # Any code greater than or equal to 200 and less than 400 indicates success. Any other code indicates failure.
          #     port: apigw-grpc-port
          #     scheme: HTTP
          #   initialDelaySeconds: 90 # Number of seconds after the container has started before startup, liveness or readiness probes are initiated. Defaults to 0 seconds. Minimum value is 0.
          #   periodSeconds: 2 # How often (in seconds) to perform the probe. Default to 10 seconds. Minimum value is 1.
          #   timeoutSeconds: 30 # Number of seconds after which the probe times out. Defaults to 1 second. Minimum value is 1.
          #   successThreshold: 1 # Minimum consecutive successes for the probe to be considered successful after having failed. Defaults to 1. Must be 1 for liveness and startup Probes. Minimum value is 1.
          #   failureThreshold: 30 # After a probe fails failureThreshold times in a row, Kubernetes considers that the overall check has failed: the container is not ready / healthy / live.
          resources:
            limits:
              memory: 600Mi
              cpu: "400m"
            requests:
              memory: 400Mi
              cpu: "100m"
