k8-services/aws-stage/apigw/echo-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-deployment
  labels:
    app.kubernetes.io/name: echo-server
    app: echo-server
  namespace: tfs-apigw
spec:
  selector:
    matchLabels:
      app: echo-server
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo-server
          # https://hub.docker.com/r/ealen/echo-server
          image: ealen/echo-server
          ports:
            - containerPort: 80
              name: echo-srv-port
          livenessProbe:
            httpGet:
              path: / # Any code greater than or equal to 200 and less than 400 indicates success. Any other code indicates failure.
              port: echo-srv-port
              scheme: HTTP
            initialDelaySeconds: 30 # Number of seconds after the container has started before startup, liveness or readiness probes are initiated. Defaults to 0 seconds. Minimum value is 0.
            periodSeconds: 60 # How often (in seconds) to perform the probe. Default to 10 seconds. Minimum value is 1.
            timeoutSeconds: 30 # Number of seconds after which the probe times out. Defaults to 1 second. Minimum value is 1.
            successThreshold: 1 # Minimum consecutive successes for the probe to be considered successful after having failed. Defaults to 1. Must be 1 for liveness and startup Probes. Minimum value is 1.
            failureThreshold: 5 # After a probe fails failureThreshold times in a row, Kubernetes considers that the overall check has failed: the container is not ready / healthy / live.
          resources:
            limits:
              memory: 200Mi
              cpu: "100m"
            requests:
              memory: 100Mi
              cpu: "50m"
