k8-services/aws-stage/apigw/apigw-service.yaml
# https://v1-20.docs.kubernetes.io/docs/concepts/services-networking/service/#loadbalancer
apiVersion: v1
kind: Service
metadata:
  name: tfs-apigw-service
  namespace: tfs-apigw
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # this should be nlb-ip or external
    service.beta.kubernetes.io/aws-load-balancer-name: apigw-nlb
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-west-1:309602515679:certificate/3defb1b0-44bb-4352-a80b-7cfaaa434d82"
    service.beta.kubernetes.io/aws-load-balancer-ssl-negotiation-policy: ELBSecurityPolicy-TLS13-1-3-2021-06
    service.beta.kubernetes.io/aws-load-balancer-alpn-policy: HTTP2Preferred
    service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: proxy_protocol_v2.enabled=true,preserve_client_ip.enabled=true
    service.beta.kubernetes.io/aws-load-balancer-eip-allocations: "eipalloc-0eff1e48d66ef94b4,eipalloc-0f26a6045ea5f83e5,eipalloc-04deb5ae83206d48d"
    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-02df877b3dcd0126e,subnet-00dc8e239e901615f,subnet-003fcc9b309cf4953"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
  labels:
    app.kubernetes.io/name: apigw
    app: apigw
spec:
  selector:
    app: apigw
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: apigw-grpc-port
    - name: http
      protocol: TCP
      port: 80
      targetPort: apigw-grpc-port
  type: LoadBalancer
